fix:change logic

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Redis": "https://peaceful-parrot-30114.upstash.io"
+    "Redis": "https://sweeping-rat-36259.upstash.io"
   }
 }
